--- a/.github/workflows/debricked.yml
+++ b/.github/workflows/debricked.yml
@@ -9,4 +9,4 @@ jobs:
             - uses: actions/checkout@v3
             - uses: debricked/actions@v3
               env:
-                 DEBRICKED_TOKEN: ${{ secrets.DEBRICKED_TOKEN }}
+                 DEBRICKED_TOKEN: ${{ secrets.DEBRICKED_CONNECTION }}
